--- a/style_header.css
+++ b/style_header.css
@@ -4,21 +4,21 @@
     box-sizing: border-box;
     list-style: none;
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     color: rgb(31, 29, 29);
     text-transform: uppercase;
     text-decoration: none;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
-html{
-    width: 99vw;
-    height: 100vh;
-    font-size: 62,5%;
-}
+
 header{
     width: 100%;
     height: 7vh;
     font-size: 18px;
     overflow-y: hidden;
+    font-size: large;
+    margin: 1vw;
 }
 .menu-content{
     text-transform: uppercase;
@@ -26,6 +26,7 @@ header{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    overflow-y: hidden;
 }
 .menu-content .list-itens li{
     cursor: pointer;
@@ -66,7 +67,7 @@ header{
     border-radius: 3px;
     background: none;
 }
-.dropdown{
-    width: 6vw;
+#btns_header{
+    margin: 2vw;
 }
 /* ^HEADER^ */
