--- a/style_faleConosco.css
+++ b/style_faleConosco.css
@@ -8,10 +8,11 @@
     color: rgb(31, 29, 29);
     text-transform: uppercase;
     text-decoration: none;
-
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 body{
-    overflow-y: visible;
+    overflow-y: hidden;
     width: 100vw;
     height: 100vh;
 }
@@ -19,8 +20,8 @@ html{
     width: 100vw;
     height: 100vh;
     font-size: 62,5%;
-    overflow-y: visible;
-    overflow-x: visible;
+    overflow-y: hidden;
+    overflow-x: hidden;
     justify-content: center;
     align-items: center;
 }
@@ -36,10 +37,10 @@ html{
     justify-content: center;
     align-items: center;
     display: flex;
-    border: solid;
     padding: 4vh;
     width: 70vh;
     height: 50vh ;
+    background-color: rgba(50, 67, 67, 0.079);
 }
 .top-container{
     display: flex;
@@ -60,7 +61,6 @@ html{
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    border: 1px solid;
     height: 40vw;
 }
 .bottom-container h1{
@@ -70,8 +70,52 @@ html{
     width: 40vh;
     margin-bottom: 3vh;
     justify-content: flex-start;
+    border: none;
 }
 #msg{
     width: 40vh;
     height: 10vw;
+    border: none;
+}
+#ten{
+    font-size: xx-large;
+    margin-right: 15vw;
+    border-bottom: 1px solid;
+}
+#line{
+  display: block;
+}
+.bottom-container{
+border: none;
+}
+.super-container{
+    border-radius: 5vh 0vw;
+}
+
+#enviar{
+ padding: 10px;
+ margin-top: 10px;
+ border-radius: 5px;
+ cursor: pointer;
+ width: 100%;
+ border: none;
+ background-color: rgba(0, 115, 128, 0.242);
+ 
+}
+enviar:hover{
+     background-color: rgb(209, 206, 206);
+}
+
+input{
+    border-radius: 5px;
+    padding: 5px;
+    text-transform: none;
+}
+
+textarea{
+    border-radius: 5px;
+    padding: 5px;
+    resize: none;
+    text-transform: none;
+    border: none;
 }
