--- a/style_minhaConta.css
+++ b/style_minhaConta.css
@@ -56,7 +56,7 @@ html{
     margin-bottom: 2vw;
     border-bottom: solid 2px;
 }
-.right-container button{
+#btn_register{
     display: flex;
     height: 3vw;
     width: 20vh;
@@ -68,4 +68,15 @@ html{
 }
 #inf{
     font-size: small;
+}
+#btn_erase{
+    display: flex;
+    height: 3vw;
+    width: 20vh;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(251, 5, 5, 0.396);
+    border: none;
+    border-radius: 0.3vh;
+    margin-top: 1vw;
 }
