--- a/style_produtos.css
+++ b/style_produtos.css
@@ -48,7 +48,7 @@ body{
 
 #btn_carrinho{
     height: 7vh;
-    background-color: rgb(126, 180, 182);
+    background-color: rgba(126, 180, 182, 0.154);
     border: none;
 }
 #btn_carrinho img{
@@ -57,4 +57,12 @@ body{
 #nome{
     font-size: large;
 }
-
+#excluir_img{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    background-color: rgba(255, 90, 90, 0.079);
+    border: none;
+    width: 4vw;
+    padding: 0.5vw
+}
